test: drop test variable mapping out of scope for 8.7