@@ -13,73 +13,33 @@ import static org.assertj.core.api.ThrowableAssert.catchThrowable;
 
 import io.camunda.zeebe.engine.util.EngineRule;
 import io.camunda.zeebe.msgpack.spec.MsgPackHelper;
-import io.camunda.zeebe.protocol.impl.record.value.job.JobResult;
-import io.camunda.zeebe.protocol.impl.record.value.job.JobResultCorrections;
 import io.camunda.zeebe.protocol.record.Assertions;
 import io.camunda.zeebe.protocol.record.Record;
 import io.camunda.zeebe.protocol.record.RecordType;
 import io.camunda.zeebe.protocol.record.RejectionType;
 import io.camunda.zeebe.protocol.record.intent.JobIntent;
-import io.camunda.zeebe.protocol.record.value.AuthorizationOwnerType;
-import io.camunda.zeebe.protocol.record.value.AuthorizationResourceMatcher;
-import io.camunda.zeebe.protocol.record.value.AuthorizationResourceType;
-import io.camunda.zeebe.protocol.record.value.EntityType;
 import io.camunda.zeebe.protocol.record.value.JobBatchRecordValue;
 import io.camunda.zeebe.protocol.record.value.JobRecordValue;
-import io.camunda.zeebe.protocol.record.value.PermissionType;
 import io.camunda.zeebe.protocol.record.value.TenantOwned;
 import io.camunda.zeebe.test.util.Strings;
 import io.camunda.zeebe.test.util.record.RecordingExporterTestWatcher;
 import io.camunda.zeebe.util.ByteValue;
-import java.util.List;
-import java.util.UUID;
+import java.util.Collections;
 import org.agrona.concurrent.UnsafeBuffer;
 import org.junit.Before;
-import org.junit.BeforeClass;
 import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
 
 public final class CompleteJobTest {
 
-  @ClassRule
-  public static final EngineRule ENGINE =
-      EngineRule.singlePartition()
-          .withSecurityConfig(config -> config.getAuthorizations().setEnabled(true));
-
+  @ClassRule public static final EngineRule ENGINE = EngineRule.singlePartition();
   private static final String PROCESS_ID = "process";
   private static String jobType;
-  private static String username;
-  private static String tenantId;
 
   @Rule
   public final RecordingExporterTestWatcher recordingExporterTestWatcher =
       new RecordingExporterTestWatcher();
-
-  @BeforeClass
-  public static void setUp() {
-    tenantId = UUID.randomUUID().toString();
-    username = UUID.randomUUID().toString();
-    ENGINE.user().newUser(username).create().getValue();
-    ENGINE.tenant().newTenant().withTenantId(tenantId).create().getValue().getTenantKey();
-    ENGINE
-        .tenant()
-        .addEntity(tenantId)
-        .withEntityType(EntityType.USER)
-        .withEntityId(username)
-        .add();
-
-    ENGINE
-        .authorization()
-        .newAuthorization()
-        .withPermissions(PermissionType.UPDATE_PROCESS_INSTANCE)
-        .withResourceMatcher(AuthorizationResourceMatcher.ID)
-        .withResourceId(PROCESS_ID)
-        .withResourceType(AuthorizationResourceType.PROCESS_DEFINITION)
-        .withOwnerId(username)
-        .withOwnerType(AuthorizationOwnerType.USER)
-        .create();
-  }
 
   @Before
   public void setup() {
@@ -90,8 +50,7 @@ public final class CompleteJobTest {
   public void shouldCompleteJob() {
     // given
     ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
+    final Record<JobBatchRecordValue> batchRecord = ENGINE.jobs().withType(jobType).activate();
     final JobRecordValue job = batchRecord.getValue().getJobs().get(0);
 
     // when
@@ -110,8 +69,7 @@ public final class CompleteJobTest {
         .hasType(job.getType())
         .hasRetries(job.getRetries())
         .hasDeadline(job.getDeadline())
-        .hasTenantId(TenantOwned.DEFAULT_TENANT_IDENTIFIER)
-        .hasResult(new JobResult().setDenied(false));
+        .hasTenantId(TenantOwned.DEFAULT_TENANT_IDENTIFIER);
   }
 
   @Test
@@ -131,15 +89,14 @@ public final class CompleteJobTest {
     // given: no dedicated variable-size limit exists - only the overall record-size ceiling
     // applies at job-completion time too, same as at process-instance creation
     ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
+    final Record<JobBatchRecordValue> batchRecord = ENGINE.jobs().withType(jobType).activate();
     final var largeValue = "x".repeat((int) (ByteValue.ofMegabytes(4) - ByteValue.ofKilobytes(1)));
 
     // when
     final Record<JobRecordValue> jobRecord =
         ENGINE
             .job()
-            .withKey(batchRecord.getValue().getJobKeys().get(0))
+            .withKey(batchRecord.getValue().getJobKeys().getFirst())
             .withVariables("{'variable':'" + largeValue + "'}")
             .expectRejection()
             .complete();
@@ -152,8 +109,7 @@ public final class CompleteJobTest {
   public void shouldCompleteJobWithVariables() {
     // given
     ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
+    final Record<JobBatchRecordValue> batchRecord = ENGINE.jobs().withType(jobType).activate();
 
     // when
     final Record<JobRecordValue> completedRecord =
@@ -174,8 +130,7 @@ public final class CompleteJobTest {
   public void shouldCompleteJobWithNilVariables() {
     // given
     ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
+    final Record<JobBatchRecordValue> batchRecord = ENGINE.jobs().withType(jobType).activate();
 
     // when
     final Record<JobRecordValue> completedRecord =
@@ -196,8 +151,7 @@ public final class CompleteJobTest {
   public void shouldCompleteJobWithZeroLengthVariables() {
     // given
     ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
+    final Record<JobBatchRecordValue> batchRecord = ENGINE.jobs().withType(jobType).activate();
 
     // when
     final Record<JobRecordValue> completedRecord =
@@ -218,8 +172,7 @@ public final class CompleteJobTest {
   public void shouldThrowExceptionOnCompletionIfVariablesAreInvalid() {
     // given
     ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
+    final Record<JobBatchRecordValue> batchRecord = ENGINE.jobs().withType(jobType).activate();
 
     final byte[] invalidVariables = new byte[] {1}; // positive fixnum, i.e. no object
 
@@ -242,135 +195,10 @@ public final class CompleteJobTest {
   }
 
   @Test
-  public void shouldCompleteJobWithSetResultDeniedFalse() {
-    // given
-    ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
-
-    // when
-    final Record<JobRecordValue> completedRecord =
-        ENGINE
-            .job()
-            .withKey(batchRecord.getValue().getJobKeys().get(0))
-            .withResult(new JobResult().setDenied(false))
-            .complete();
-
-    // then
-    Assertions.assertThat(completedRecord)
-        .hasRecordType(RecordType.EVENT)
-        .hasIntent(JobIntent.COMPLETED);
-
-    Assertions.assertThat(completedRecord.getValue()).hasResult(new JobResult().setDenied(false));
-  }
-
-  @Test
-  public void shouldCompleteJobWithSetResultDeniedTrueAndDeniedReason() {
-    // given
-    ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
-
-    // when
-    final Record<JobRecordValue> completedRecord =
-        ENGINE
-            .job()
-            .withKey(batchRecord.getValue().getJobKeys().get(0))
-            .withResult(
-                new JobResult()
-                    .setDenied(true)
-                    .setDeniedReason("Reason to deny lifecycle transition"))
-            .complete();
-
-    // then
-    Assertions.assertThat(completedRecord)
-        .hasRecordType(RecordType.EVENT)
-        .hasIntent(JobIntent.COMPLETED);
-
-    Assertions.assertThat(completedRecord.getValue())
-        .hasResult(
-            new JobResult().setDenied(true).setDeniedReason("Reason to deny lifecycle transition"));
-  }
-
-  @Test
-  public void shouldCompleteJobWithResultWithCorrections() {
-    // given
-    ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
-
-    final JobResultCorrections corrections = new JobResultCorrections();
-    corrections.setAssignee("TestAssignee");
-    corrections.setDueDate("2025-05-23T01:02:03+01:00");
-    corrections.setFollowUpDate("2025-06-23T01:02:03+01:00");
-    corrections.setCandidateUsersList(List.of("userA", "userB"));
-    corrections.setCandidateGroupsList(List.of("groupA", "groupB"));
-    corrections.setPriority(20);
-
-    final List<String> correctedAttributes =
-        List.of(
-            "assignee", "dueDate", "followUpDate", "candidateUsers", "candidateGroups", "priority");
-
-    final JobResult result =
-        new JobResult().setCorrections(corrections).setCorrectedAttributes(correctedAttributes);
-
-    // when
-    final Record<JobRecordValue> completedRecord =
-        ENGINE
-            .job()
-            .withKey(batchRecord.getValue().getJobKeys().get(0))
-            .withResult(result)
-            .complete();
-
-    // then
-    Assertions.assertThat(completedRecord)
-        .hasRecordType(RecordType.EVENT)
-        .hasIntent(JobIntent.COMPLETED);
-
-    Assertions.assertThat(completedRecord.getValue()).hasResult(result);
-  }
-
-  @Test
-  public void shouldCompleteJobWithPartiallySetResultCorrections() {
-    // given
-    ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
-
-    final JobResultCorrections corrections = new JobResultCorrections();
-    corrections.setAssignee("TestAssignee");
-    corrections.setDueDate("2025-05-23T01:02:03+01:00");
-    corrections.setFollowUpDate("2025-06-23T01:02:03+01:00");
-    corrections.setPriority(20);
-
-    final List<String> correctedAttributes =
-        List.of("assignee", "dueDate", "followUpDate", "priority");
-
-    final JobResult result =
-        new JobResult().setCorrections(corrections).setCorrectedAttributes(correctedAttributes);
-
-    // when
-    final Record<JobRecordValue> completedRecord =
-        ENGINE
-            .job()
-            .withKey(batchRecord.getValue().getJobKeys().get(0))
-            .withResult(result)
-            .complete();
-
-    // then
-    Assertions.assertThat(completedRecord)
-        .hasRecordType(RecordType.EVENT)
-        .hasIntent(JobIntent.COMPLETED);
-
-    Assertions.assertThat(completedRecord.getValue()).hasResult(result);
-  }
-
-  @Test
   public void shouldRejectCompletionIfJobIsCompleted() {
     // given
     ENGINE.createJob(jobType, PROCESS_ID);
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
+    final Record<JobBatchRecordValue> batchRecord = ENGINE.jobs().withType(jobType).activate();
 
     final Long jobKey = batchRecord.getValue().getJobKeys().get(0);
     ENGINE.job().withKey(jobKey).complete();
@@ -389,8 +217,7 @@ public final class CompleteJobTest {
     ENGINE.createJob(jobType, PROCESS_ID);
 
     // when
-    final Record<JobBatchRecordValue> batchRecord =
-        ENGINE.jobs().withType(jobType).activate(username);
+    final Record<JobBatchRecordValue> batchRecord = ENGINE.jobs().withType(jobType).activate();
     final Long jobKey = batchRecord.getValue().getJobKeys().get(0);
     ENGINE.job().withKey(jobKey).fail();
 
@@ -399,5 +226,53 @@ public final class CompleteJobTest {
 
     // then
     Assertions.assertThat(jobRecord).hasRejectionType(RejectionType.INVALID_STATE);
+  }
+
+  @Test
+  public void shouldCompleteJobForCustomTenant() {
+    // given
+    final String tenantId = "acme";
+    ENGINE.createJob(jobType, PROCESS_ID, Collections.emptyMap(), tenantId);
+    final Record<JobBatchRecordValue> batchRecord =
+        ENGINE.jobs().withType(jobType).withTenantId(tenantId).activate();
+
+    // when
+    final Record<JobRecordValue> jobCompletedRecord =
+        ENGINE
+            .job()
+            .withKey(batchRecord.getValue().getJobKeys().get(0))
+            .withAuthorizedTenantIds(tenantId)
+            .complete();
+
+    // then
+    final JobRecordValue recordValue = jobCompletedRecord.getValue();
+
+    Assertions.assertThat(jobCompletedRecord)
+        .hasRecordType(RecordType.EVENT)
+        .hasIntent(JobIntent.COMPLETED);
+
+    Assertions.assertThat(recordValue).hasTenantId(tenantId);
+  }
+
+  @Test
+  public void shouldRejectCompletionIfTenantIsUnauthorized() {
+    // given
+    final String tenantId = "acme";
+    final String falseTenantId = "foo";
+    ENGINE.createJob(jobType, PROCESS_ID, Collections.emptyMap(), tenantId);
+    final Record<JobBatchRecordValue> batchRecord =
+        ENGINE.jobs().withType(jobType).withTenantId(tenantId).activate();
+
+    // when
+    final Record<JobRecordValue> jobRecord =
+        ENGINE
+            .job()
+            .withKey(batchRecord.getValue().getJobKeys().get(0))
+            .withAuthorizedTenantIds(falseTenantId)
+            .expectRejection()
+            .complete();
+
+    // then
+    Assertions.assertThat(jobRecord).hasRejectionType(RejectionType.NOT_FOUND);
   }
 }
